# cppxfs

./: .gitignore  .gitmodules  CMakeLists.txt  configure.bat  generate.bat  run_client.bat
inc/: ICPPDevice.hpp  IXFSDevice.hpp
modules/: CMakeLists.txt
src/Device/Implementations/: CTTBCR310.cpp  CTTCAM.cpp  CTTCAM.h  CTTCAM_N.h  CTTCDM.cpp  CTTCDM310.h  CTTCIM.h  CTTDEP.h  CTTIDC.h  CTTPTR.cpp  CTTSIU.cpp  CTTTTU.cpp  CTTVDM.cpp
src/Device/Interfaces/: ITTSIU.h
src/Include/NXFS/: AraFPScanAPI.h
src/Include/XFS/: XFSAPI.H  XFSBCR.H  XFSCAM_EXT.H  XFSCDM.H  XFSIDC.H  XFSIPM.H  XFSPIN.H  XFSPTR.H  XFSSPI.H  xfschk.h  xfsipm.h  xfspin.h  xfssiu.h  xfsttu.h
src/Include/XFS_W/: xfs_w.hpp  xfsapi_w.hpp  xfscam_w.hpp
src/Include/_XFS/: XFSBCR310.H  XFSCRD.H  xfscim.h
src/Include/common/: ITTComponent.cpp  ITTComponent.h  TTFRM_macro.h  TTFrameworkUtility.h  descriptors.hpp
src/TTDevice/: CTTDevice_factory.cpp  CTTDevice_factory.h  ITTDevice.cpp  ITTDevice.h
src/TTDevice/Implementations/: CTTBCR.cpp  CTTBCR.h  CTTCAM_N.cpp  CTTCDM.h  CTTCHK.cpp  CTTCHK.h  CTTDEP.cpp  CTTIDC.cpp  CTTPTR.h  CTTSIU.h  CTTVDM.h
src/TTDevice/Interfaces/: ITTBCR310.h  ITTCAM.h  ITTCDM310.h  ITTCHK.h  ITTCIM.h  ITTDEP.h  ITTIDC.h  ITTPIN.h  ITTPTR.h  ITTTTU.h  ITTVDM.h
src/XFSAPI_W/implementations/: CXFSAPI_W.hpp
src/XFSDevice/: IXFSDevice.cpp  IXFSDevice.hpp
src/XFSDevice/implementations/: CXFSDevice.cpp  CXFSDevice.h
src/XFSWindow/: IXFSWindow.hpp
src/XFSWindow/Implementations/: CXFSWindow.cpp  CXFSWindow.h  CXFSWindow.hpp
src/XFSWrapper/: IXFSWrapper.cpp  IXFSWrapper.h  IXFSWrapper.hpp
src/XFSWrapper/Implementations/: CXFSWrapper.cpp  CXFSWrapper.h  CXFSWrapper.hpp
src/_Device/Implementations/: CTTBCR310.h  CTTCDM310.cpp  CTTCIM.cpp  CTTPIN.cpp  CTTPIN.h  CTTTTU.h
src/_Device/Interfaces/: ITTBCR.h  ITTCDM.h
src/common/: NOVACONSTRUCTOR.h  XFSHeaders.h  _DeviceUtility.h  definitions.hpp  utility.hpp  xfs_descriptors.hpp
src/common/_XFS/: XFSIDC.H  XFSSPI.H
src/common/design/: IObserver.hpp
src/common/xfs_w/: xfsapi_w.hpp
src/lib/AratechFingerScanner/: AraFPScanAPI.lib
src/xfs/XFSDevice/implementations/: CXFSDevice.h
src/xfs/XFSWindow/: IXFSWindow.hpp
src/xfs/XFSWindow/Implementations/: CXFSWindow.cpp  CXFSWindow.hpp
src/xfs/common/_XFS/: XFSCDM.H  XFSCDM310.H  XFSCUSTOM.H
src/xfs/common/xfs_w/: xfsapi_w.hpp  xfscam_w.hpp
src/xfs/xfsapi_w/: ixfsapi_w.hpp
src/xfs/xfsapi_w/implementations/: cxfsapi_w.cpp  cxfsapi_w.hpp
tests/: gtest_wfs_structures.hpp  gtest_wfsapi.hpp  gtest_wfsapi_structures.hpp  gtest_wfscam_structures.hpp  gtests.cpp
